<resources>
    <string name="app_name">三国杀制图</string>
    <string name="empty">""</string>
    <string name="start_game">一二三四</string>

    <string name="hero_maker">武将制图</string>
    <string name="title_activity_hero_maker">三国杀制图</string>
    <string name="action_settings">Settings</string>
    <string name="card_version">卡牌版本</string>
    <string name="hero_group">武将势力</string>
    <string name="hero_group_with_dot">武将势力:</string>
    <string name="max_hp">生命值</string>
    <string name="show_or_hide">隐藏/显示</string>

    <string name="hero_base_board">底板</string>
    <string name="hero_frame">边框</string>
    <string name="hero_logo">势力</string>
    <string name="hero_skill">技能</string>
    <string name="hero_hp">勾玉</string>


    <!--transition动画字符串-->
    <string name="transition_start_game_img">transition_start_game_img</string>
    <string name="transition_hero_maker_img">transition_hero_maker_img</string>

    <string name="transition_card_maker_frame">transition_card_maker_frame</string>
    <string name="transition_card_maker_group">transition_card_maker_group</string>
    <string name="transition_card_maker_hp">transition_card_maker_hp</string>
    <string name="transition_card_maker_skill_bard">transition_card_maker_skill_bard</string>
    <string name="transition_card_maker_layout">transition_card_maker_layout</string>


    <string name="add_skill">添加技能</string>
    <string name="import_pic">导入图片</string>
    <string name="skill">技能:</string>
    <string name="hero_title">称号</string>
    <string name="hero_name">名字</string>

    <string name="hero_group_wei">魏</string>
    <string name="hero_group_shu">蜀</string>
    <string name="hero_group_wu">吴</string>
    <string name="hero_group_qun">群</string>
    <string name="hero_group_god">神</string>
    <string name="export_format">导出格式</string>
    <string name="format_png">PNG</string>
    <string name="format_jpg">JPG</string>
    <string name="export">导出</string>
    <string name="format_webp">WEBP</string>
    <string name="skill_board">技能背景</string>
    <string name="skill_board_up">变高</string>
    <string name="skill_board_down">变矮</string>
    <string name="skill_name">技能名</string>
    <string name="skill_info">技能描述</string>
    <string name="remove_skill">移除技能</string>
    <string name="export_fail">导出失败</string>
    <string name="export_done">导出成功</string>
    <string name="no_permission">无法获得文件读写权限</string>
    <string name="base_info">基本信息</string>
    <string name="adjust_position">调整位置</string>
    <string name="other_info">高级选项</string>
    <string name="step_len">步长</string>
    <string name="skill1_bar">技一底板</string>
    <string name="skill2_bar">技二底板</string>
    <string name="skill3_bar">技三底板</string>
    <string name="skill1">技能一</string>
    <string name="skill2">技能二</string>
    <string name="skill3">技能三</string>
    <string name="skill_board_fat">变宽</string>
    <string name="skill_board_slim">变窄</string>
    <string name="action_about">关于</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auto_transfer_traditional">自动转繁体</string>
    <string name="font_size">字号</string>
    <string name="font">字体</string>
    <string name="font_color">字体颜色</string>
    <string name="default_color">#f4f424</string>
    <string name="font_outer_color">描边颜色</string>
    <string name="horizontal_name">横向显示</string>
    <string name="font_spacing">行间距(上下间距)</string>
    <string name="font_spacing_description">注:如果值为正数表示增加行间距;如果值为负数表示减少行间距.横向显示时可通过添加空格实现间距控制</string>
    <string name="line_space_hint">0~60</string>
    <string name="custom_component">自定义组件</string>
    <string name="select">选择</string>
    <string name="enable">启用</string>
    <string name="outImg">出框</string>
    <string name="hero_image">插画</string>
    <string name="tall">变高</string>
    <string name="high">高</string>
    <string name="fat">胖</string>
    <string name="thin">瘦</string>
    <string name="low">矮</string>
    <string name="guozhan_mode">国战模式</string>
    <string name="standard_mode">标准模式</string>
    <string name="hp_number">勾玉数量</string>
    <string name="hp_image">勾玉图片</string>
    <string name="half_hp_image">半血勾玉</string>
    <string name="default_hp">5</string>
    <string name="default_value">0</string>
    <string name="hp_height">勾玉高度</string>
    <string name="hp_width">勾玉宽度</string>
    <string name="layer_1">图层一</string>
    <string name="layer_2">图层二</string>
    <string name="layer_3">图层三</string>
    <string name="s_width">宽度</string>
    <string name="s_height">高度</string>
    <string name="skill4">技能四</string>
    <string name="heart">♥</string>
    <string name="spade">♠</string>
    <string name="club">♣</string>
    <string name="diamond">♦</string>
    <string name="bold">粗体</string>
    <string name="new_line">换行</string>
    <string name="name_font_size">技能名字号</string>
    <string name="name_font">技能名字体</string>
    <string name="info_font_size">描述字号</string>
    <string name="info_font">描述字体</string>
    <string name="skill1_name">技一名字</string>
    <string name="skill2_name">技二名字</string>
    <string name="skill3_name">技三名字</string>
    <string name="skill1_info">技一描述</string>
    <string name="skill2_info">技二描述</string>
    <string name="skill3_info">技三描述</string>
    <string name="string_sanguosha">三国杀</string>
    <string name="string_make_img">制图</string>
    <string name="width">宽度</string>
    <string name="height">高度</string>
    <string name="size">尺寸</string>
    <string name="wrap_content">原图尺寸</string>
    <string name="match_parent">填充</string>
    <string name="custom">自定义</string>
    <string name="action_hero_template">武将模板</string>
    <string name="action_card_template">卡牌模板</string>
    <string name="all_view_element">全部视图元素</string>
    <string name="once_move_step_length">单次移动步长</string>
    <string name="once_scale_step_length">单次缩放大小</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="setting">设置</string>
    <string name="main_layout_height">主布局高度</string>
    <string name="main_layout_width">主布局宽度</string>
    <string name="view_name">控件名</string>
    <string name="add_view">添加控件</string>
    <string name="add_perfab">添加预制组件</string>
    <string name="action_history">旧版入口</string>
    <string name="cur_view_empty">当前控件:</string>
    <string name="none">无</string>
    <string name="free_scale">缩放</string>
    <string name="action_layout_settings">主布局设置</string>
    <string name="add_title">添加称号</string>
    <string name="text">文字</string>
    <string name="color">颜色</string>
    <string name="add_name">添加武将名</string>
    <string name="font_content">文字内容</string>
    <string name="vertical">纵向显示</string>
    <string name="word_spacing">字间距(左右间距)</string>
    <string name="rich_text">富文本模式(支持html语法)</string>
    <string name="font_guide">字间距：以em为单位设置文本间距，负值会收紧文字，建议取值范围-1.0~3.0。
    \n行间距：上下两行字体间距，单位为px，负值会压缩间距，建议取值范围-20~100。
    \n旋转：正数顺时针旋转，负数逆时针旋转</string>
    <string name="rotation">旋转角度</string>
    <string name="fixed">固定宽高</string>
    <string name="fixed_width_fit_height">宽固定,高度自适应</string>
    <string name="fixed_height_fit_width">高固定,宽度自适应</string>
    <string name="fit">原始尺寸</string>
    <string name="scale_type">缩放类型</string>
    <string name="full_screen">充满屏幕</string>
    <string name="left">左边距</string>
    <string name="top">顶部边距</string>
    <string name="custom_image">自定义贴图</string>
    <string name="image">图片</string>
    <string name="add_text">添加文本</string>
    <string name="text_content">文本内容</string>
    <string name="fixed_width">固定宽度</string>
    <string name="layout_width">布局宽度</string>
    <string name="ems">单行字数</string>
    <string name="space">空格</string>
    <string name="select_color">选择颜色</string>

</resources>
