<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/_xpopup_round3_bg"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        tools:ignore="ContentDescription">

        <TextView
            android:id="@+id/tv_title"
            style="@style/XPopupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/view_name"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/font_content"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/font_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_reduce"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="?selectableItemBackground"
                    android:src="@drawable/ic_remove" />

                <EditText
                    android:id="@+id/et_font_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="40dp"
                    android:gravity="center"
                    android:hint="@string/font_size"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="18sp"
                    tools:ignore="Autofill" />

                <ImageView
                    android:id="@+id/btn_add"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="?selectableItemBackground"
                    android:src="@drawable/ic_add" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_font_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color" />

                <TextView
                    android:id="@+id/tv_font_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1" />

                <com.jaredrummler.android.colorpicker.ColorPanelView
                    android:id="@+id/cpv_color_panel"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cpv_borderColor="@color/colorBlack"
                    app:cpv_colorShape="circle" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font" />

            <Spinner
                android:id="@+id/spinner_font"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/switch_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_word_spacing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/word_spacing"
                    android:inputType="numberSigned|numberDecimal"
                    android:maxLines="1"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_font_spacing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/font_spacing"
                    android:inputType="numberSigned|numberDecimal"
                    android:maxLines="1"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_ems"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ems"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/switch_ems_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fixed_width" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_rotation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rotation"
                    android:inputType="numberSigned|numberDecimal"
                    android:maxLines="1"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/switch_traditional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_transfer_traditional" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_guide"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <Switch
            android:id="@+id/switch_rich_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/rich_text" />

        <GridLayout
            android:id="@+id/grid_rich_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="3"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_heart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heart" />

            <Button
                android:id="@+id/btn_spade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spade" />

            <Button
                android:id="@+id/btn_diamond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diamond" />

            <Button
                android:id="@+id/btn_club"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/club" />

            <Button
                android:id="@+id/btn_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bold" />

            <Button
                android:id="@+id/btn_new_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_line" />

            <Button
                android:id="@+id/btn_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space" />

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="?selectableItemBackground"
                android:paddingLeft="18dp"
                android:paddingTop="10dp"
                android:paddingRight="18dp"
                android:paddingBottom="10dp"
                android:text="@string/cancel"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:paddingLeft="18dp"
                android:paddingTop="10dp"
                android:paddingRight="18dp"
                android:paddingBottom="10dp"
                android:text="@string/sure"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>


