<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/_xpopup_round3_bg"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/tv_title"
        style="@style/XPopupTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/import_pic" />

            <TextView
                android:id="@+id/tv_image_path"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iv_select_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_import" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size" />

            <RadioGroup
                android:id="@+id/rb_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_warp_context"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/wrap_content" />

                <RadioButton
                    android:id="@+id/rb_match_parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/match_parent" />

                <RadioButton
                    android:id="@+id/rb_custom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom" />

            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/width"
                    android:maxLines="1"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/height"
                    android:maxLines="1"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="?selectableItemBackground"
            android:paddingLeft="18dp"
            android:paddingTop="10dp"
            android:paddingRight="18dp"
            android:paddingBottom="10dp"
            android:text="@string/cancel"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:paddingLeft="18dp"
            android:paddingTop="10dp"
            android:paddingRight="18dp"
            android:paddingBottom="10dp"
            android:text="@string/sure"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>

